style: 스크롤리텔링 및 탭 애니메이션 기능을 위해 변경 및 추가 - 자식 요소가 body 안에서만 보이도록 clip-path, overflow-x 추가 - about__intro를 sticky로 변경 - about__guide가 접힐 때 글자들이 높이에 맞출 수 있도록 guide의 상하 padding 0으로 변경 - 같은 이유로 guide 내부 p의 첫 번째, 마지막 요소에 margin 추가 - 패럴렉스 스크롤링을 위해 about 이미지 fixed로 했다가 일정 스크롤에서 opacity:0으로 변경 - 옵저버로 nav 버튼이 안 보일 때 프로젝트 섹션 슬라이드 위해 hide 클래스 추가 및 속성 추가

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -89,10 +89,13 @@ html {
 }
 
 body {
+  position: relative;
   background-color: var(--bg-color);
   transition: background-color 0.45s ease-in;
   margin: 0 6%;
+  clip-path: inset(0);
   box-shadow: 0 8px 24px var(--box-shadow);
+  overflow-x: hidden;
 }
 
 button {
@@ -153,15 +156,14 @@ rect {
 /*? 헤더 */
 .header {
   position: absolute;
-  background: rgb(21, 0, 24);
   background: linear-gradient(
     180deg,
     rgba(21, 0, 24, 1) 10%,
     rgba(2, 0, 36, 0) 100%
   );
-  left: 6%;
+  left: 0;
   top: 4px;
-  width: 88%;
+  width: 100%;
   z-index: 9;
   height: var(--header-height);
   margin: auto;
@@ -185,9 +187,21 @@ rect {
 }
 
 .header-nav {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.header-nav__background {
+  position: absolute;
+  width: 0;
+  top: 0;
+  left: 0;
+  background: #2d2d2d8e;
+  border-radius: 6px;
+  transition: transform 0.3s, width 0.3s, opacity 0.3s;
+  opacity: 0;
 }
 
 .header__hamberger {
@@ -198,7 +212,6 @@ rect {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  column-gap: 20px;
 }
 
 .header-nav-list__item {
@@ -210,7 +223,7 @@ rect {
   padding: 1em 2em;
   transition: color 0.2s ease-in-out;
   cursor: pointer;
-  position: relative; /* 추가 */
+  position: relative;
   outline: none;
   opacity: 0.7;
 }
@@ -232,7 +245,7 @@ rect {
   opacity: 1;
 }
 
-.header-nav-list__item:hover::before, /* 추가 */
+.header-nav-list__item:hover::before,
 .header-nav-list__item.focus::before {
   width: 100%;
 }
@@ -242,27 +255,42 @@ rect {
   position: relative;
   background-color: var(--bg-color);
   color: var(--pale-white);
+  height: 180vh;
+  display: flex;
+  justify-content: center;
+}
+
+.about__intro {
+  position: sticky;
+  top: 20vh;
+  left: 0;
   height: 100vh;
   display: flex;
-  justify-content: center;
-}
-.about__intro {
-  display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   z-index: 1;
+  opacity: 1;
+  transition: opacity 0.5s ease-in-out;
 }
+
+.about__intro.hide {
+  opacity: 0;
+}
+
 .about__title {
   opacity: 1;
-  transition: opacity 0.5s;
   font-size: var(--title-size-xl);
+  width: 100%;
+  text-align: center;
+  height: 1.5em;
 }
 
 .about__subtitle {
   font-size: var(--title-size-l);
   margin-top: 10%;
   margin-bottom: 20%;
+  transform: translateX(0);
 }
 
 .about__nav {
@@ -274,6 +302,12 @@ rect {
   border: 2px solid var(--pale-white);
   border-radius: var(--border-radius-s);
   color: var(--primary-color);
+  outline: none;
+  position: absolute;
+  top: 44%;
+  left: 0;
+  transition: background-color 0.4s, border-width 0.4s, top 0.4s, color 0.4s,
+    opacity 0.4s;
 }
 
 .about__nav:not(.focus),
@@ -286,15 +320,31 @@ rect {
   animation: pulse 0.3s ease-in-out;
 }
 
+.about__nav.fix {
+  position: fixed;
+  animation: none;
+}
+
 .about__guide {
   margin-top: 1em;
   display: flex;
   flex-direction: column;
   row-gap: 1em;
-  padding: 1em;
+  padding: 0 1em;
   border: 2px solid var(--pale-gray);
   border-radius: var(--border-radius-l);
   background-color: rgba(0, 0, 0, 0.63);
+  width: 100%;
+  opacity: 1;
+  transition: background-color 0.5s, width 0.4s, border-width 0.4s, padding 0.4s;
+}
+
+.about__guide p:first-child {
+  margin-top: 1em;
+}
+
+.about__guide p:last-child {
+  margin-bottom: 1em;
 }
 
 @keyframes flash {
@@ -310,11 +360,32 @@ rect {
   }
 }
 
+#project {
+  transition: opacity 1s, transform 1s;
+  opacity: 1;
+  transform: translateX(0);
+}
+
+#project.hide {
+  opacity: 0;
+  transform: translateX(-106%);
+}
+
 .about__image {
-  position: absolute;
-  width: 100%;
-  height: 100%;
+  position: fixed;
+  width: 88%;
+  height: 100vh;
   opacity: 0.9;
+  transition: opacity 0.5s ease;
+}
+
+.project-header {
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.project-header.show {
+  opacity: 1;
 }
 
 @keyframes extend-seperator {
@@ -725,7 +796,7 @@ rect {
   transition: background-color 0.45s ease-in;
   width: 100%;
   height: 70%;
-  background-image: url("https://images.unsplash.com/photo-1554034483-04fda0d3507b?auto=format&fit=crop&q=80&w=2070&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+  /* background-image: url("/public/img/about-2.png"); */
   background-size: cover;
 }
 
